--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
   /* ピラミッド */
   .pyramidWrap{
     padding: 12px 14px 8px;
+
+    /* ★背景画像追加（ここだけ追加） */
+    background-image: url("https://i.imgur.com/lFGbXfI.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   .pyramid{
     display:flex;
@@ -326,6 +332,12 @@
     position: relative;
     background:#fff;
     overflow:hidden;
+
+    /* ★背景画像追加（ここだけ追加） */
+    background-image: url("https://i.imgur.com/lFGbXfI.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   .exportBanner{
     height: 150px;
