--- a/index.html
+++ b/index.html
@@ -533,6 +533,39 @@ const trainees = [
   {name:"保里 瑛都(H.EITO)", img:"https://i.imgur.com/IAhs4ZA.png"},
   {name:"金田 栄都(K.EITO)", img:"https://i.imgur.com/tF7i1du.png"},
   {name:"櫻井 楓真(FUMA)", img:"https://i.imgur.com/WIWI8Sx.png"}
+  <!-- ⭐ あなたのマスターコードそのまま + traineesだけ追加済み完全版 -->
+
+<script>
+const HEADER_IMAGE_URL = "https://i.imgur.com/nYBRUdd.png";
+
+const trainees = [
+  {name:"アダム・ナガイ(ADAM)", img:"https://i.imgur.com/6QGzvRx.png"},
+  {name:"中丸 晏寿(AJU)", img:"https://i.imgur.com/KiZCKos.png"},
+  {name:"オム・スアンカワーテン(AOM)", img:"https://i.imgur.com/dDIFJSc.png"},
+  {name:"アーチャー・ウイ(ARCHER)", img:"https://i.imgur.com/5iIerqN.png"},
+  {name:"篠ヶ谷 歩夢(S.AYUMU)", img:"https://i.imgur.com/YJAdh8q.png"},
+  {name:"小林 千悟(CHISATO)", img:"https://i.imgur.com/Iu0hNBO.png"},
+  {name:"加藤 大樹 (K.DAIKI)", img:"https://i.imgur.com/4fRk2EB.png"},
+  {name:"カク・ドンミン(DONGMIN)", img:"https://i.imgur.com/xZSQqMh.png"},
+  {name:"末川 瑛太(EITA)", img:"https://i.imgur.com/alEjKCP.png"},
+  {name:"保里 瑛都(H.EITO)", img:"https://i.imgur.com/IAhs4ZA.png"},
+  {name:"金田 栄都(K.EITO)", img:"https://i.imgur.com/tF7i1du.png"},
+  {name:"櫻井 楓真(FUMA)", img:"https://i.imgur.com/WIWI8Sx.png"},
+
+  /* ▼▼▼ 追加メンバー ▼▼▼ */
+  {name:"小笠原ジュゼッペ慧(GIUSEPPE)", img:"https://i.imgur.com/2oKn3Ma.jpeg"},
+  {name:"倉橋 吾槙(GOTEN)", img:"https://i.imgur.com/hlEjYqR.png"},
+  {name:"堀尾 聖(HIJIRI)", img:"https://i.imgur.com/5Qb5dRJ.png"},
+  {name:"瑞慶覧 太都(HIROTO)", img:"https://i.imgur.com/5Qb5dRJ.png"},
+  {name:"ユ・ヒョンスン(HYEONSEUNG)", img:"https://i.imgur.com/lY3lXLj.png"},
+  {name:"岡田 彪吾(HYUGO)", img:"https://i.imgur.com/zalwc1W.png"},
+  {name:"柳谷 伊冴(ISSA)", img:"https://i.imgur.com/gboCNWu.png"},
+  {name:"ユン・ジェヨン(JAEYONG)", img:"https://i.imgur.com/1yCImxd.png"},
+  {name:"ジュアン・ジェイ(JAY)", img:"https://i.imgur.com/41jKNZX.png"},
+  {name:"丸尾 尋一郎(JINICHIRO)", img:"https://i.imgur.com/83azYjx.png"},
+  {name:"河邊 晟(JOE)", img:"https://i.imgur.com/DqUS1o6.png"}
+];
+</script>
 ];
 
 const rowSizes = [1,2,3,5];
