--- a/index.html
+++ b/index.html
@@ -544,7 +544,27 @@ const trainees = [
   {name:"ユン・ジェヨン(JAEYONG)", img:"https://i.imgur.com/1yCImxd.png"},
   {name:"ジュアン・ジェイ(JAY)", img:"https://i.imgur.com/41jKNZX.png"},
   {name:"丸尾 尋一郎(JINICHIRO)", img:"https://i.imgur.com/83azYjx.png"},
-  {name:"河邊 晟(JOE)", img:"https://i.imgur.com/DqUS1o6.png"}
+  {name:"河邊 晟(JOE)", img:"https://i.imgur.com/DqUS1o6.png"},
+
+  {name:"シン・ジョンウク(JUNGUK)", img:"https://i.imgur.com/6cwEusK.jpeg"},
+  {name:"金安 純正(JUNSEI)", img:"https://i.imgur.com/juPhMDR.png"},
+  {name:"宇野 海夢(KAIMU)", img:"https://i.imgur.com/QVliSyD.png"},
+  {name:"多比 奏聖(KANADE)", img:"https://i.imgur.com/QVliSyD.png"},
+  {name:"横山 奏夢(KANAME)", img:"https://i.imgur.com/QVliSyD.png"},
+  {name:"関 敬次郎(KEIJIRO)", img:"https://i.imgur.com/QVliSyD.png"},
+  {name:"髙松 敬祐(KEISUKE)", img:"https://i.imgur.com/bs4vfiF.png"},
+  {name:"小野 慶人(KEITO)", img:"https://i.imgur.com/glfmRJE.png"},
+  {name:"西山 賢人(KENTO)", img:"https://i.imgur.com/izEXoBY.png"},
+  {name:"河合 晃誠(KOSEI)", img:"https://i.imgur.com/E30eGfr.png"},
+  {name:"照井 康祐(KOSUKE)", img:"https://i.imgur.com/oDkwdFn.png"},
+  {name:"浅香 孝太郎(KOTARO)", img:"https://i.imgur.com/7eJxl8o.png"},
+  {name:"髙谷 京平(KYOHEI)", img:"https://i.imgur.com/CLU1cPO.png"},
+  {name:"田中 蒔(MAKI)", img:"https://i.imgur.com/No6Nybr.png"},
+  {name:"山根 武蔵(MUSASHI)", img:"https://i.imgur.com/Ou2XuDa.png"},
+  {name:"土田 央修(OSUKE)", img:"https://i.imgur.com/Xs0WjIn.png"},
+  {name:"堀野 蓮(H.REN)", img:"https://i.imgur.com/FQEx0JM.png"},
+  {name:"小清水 蓮(KO.REN)", img:"https://i.imgur.com/S8Ij9OZ.png"},
+  {name:"チェン・リッキー(RICKEY)", img:"https://i.imgur.com/DnnZVAT.png"}
 ];
 
 const rowSizes = [1,2,3,5];
