--- a/index.html
+++ b/index.html
@@ -549,9 +549,9 @@ const trainees = [
   {name:"シン・ジョンウク(JUNGUK)", img:"https://i.imgur.com/6cwEusK.jpeg"},
   {name:"金安 純正(JUNSEI)", img:"https://i.imgur.com/juPhMDR.png"},
   {name:"宇野 海夢(KAIMU)", img:"https://i.imgur.com/QVliSyD.png"},
-  {name:"多比 奏聖(KANADE)", img:"https://i.imgur.com/QVliSyD.png"},
-  {name:"横山 奏夢(KANAME)", img:"https://i.imgur.com/QVliSyD.png"},
-  {name:"関 敬次郎(KEIJIRO)", img:"https://i.imgur.com/QVliSyD.png"},
+  {name:"多比 奏聖(KANADE)", img:"https://i.imgur.com/rdSJ6QX.png"},
+  {name:"横山 奏夢(KANAME)", img:"https://i.imgur.com/0brlEw8.png"},
+  {name:"関 敬次郎(KEIJIRO)", img:"https://i.imgur.com/PHlkDUt.png"},
   {name:"髙松 敬祐(KEISUKE)", img:"https://i.imgur.com/bs4vfiF.png"},
   {name:"小野 慶人(KEITO)", img:"https://i.imgur.com/glfmRJE.png"},
   {name:"西山 賢人(KENTO)", img:"https://i.imgur.com/izEXoBY.png"},
