--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ const trainees = [
   {name:"小笠原ジュゼッペ慧(GIUSEPPE)", img:"https://i.imgur.com/2oKn3Ma.jpeg"},
   {name:"倉橋 吾槙(GOTEN)", img:"https://i.imgur.com/hlEjYqR.png"},
   {name:"堀尾 聖(HIJIRI)", img:"https://i.imgur.com/5Qb5dRJ.png"},
-  {name:"瑞慶覧 太都(HIROTO)", img:"https://i.imgur.com/5Qb5dRJ.png"},
+  {name:"瑞慶覧 太都(HIROTO)", img:"https://i.imgur.com/siOPGIr.png"},
   {name:"ユ・ヒョンスン(HYEONSEUNG)", img:"https://i.imgur.com/lY3lXLj.png"},
   {name:"岡田 彪吾(HYUGO)", img:"https://i.imgur.com/zalwc1W.png"},
   {name:"柳谷 伊冴(ISSA)", img:"https://i.imgur.com/gboCNWu.png"},
