--- a/index.html
+++ b/index.html
@@ -564,7 +564,28 @@ const trainees = [
   {name:"土田 央修(OSUKE)", img:"https://i.imgur.com/Xs0WjIn.png"},
   {name:"堀野 蓮(H.REN)", img:"https://i.imgur.com/FQEx0JM.png"},
   {name:"小清水 蓮(KO.REN)", img:"https://i.imgur.com/S8Ij9OZ.png"},
-  {name:"チェン・リッキー(RICKEY)", img:"https://i.imgur.com/DnnZVAT.png"}
+  {name:"チェン・リッキー(RICKEY)", img:"https://i.imgur.com/DnnZVAT.png"},
+
+  /* ▼ 今回追加19人（ここから） */
+  {name:"神元 理丘(RIKU)", img:"https://i.imgur.com/jwJ9CLd.png"},
+  {name:"鳩場 陸人(H.RIKUTO)", img:"https://i.imgur.com/JdCFbCb.png"},
+  {name:"今江 陸斗(I.RIKUTO)", img:"https://i.imgur.com/jiZZwJu.png"},
+  {name:"甲斐 陸也(RIKUYA)", img:"https://i.imgur.com/lfiqB2f.png"},
+  {name:"大瀬 凜和(RINTO)", img:"https://i.imgur.com/OT0UHId.png"},
+  {name:"上野 琉偉(U.RUI)", img:"https://i.imgur.com/36XqMd9.png"},
+  {name:"飯塚 亮賀(RYOGA)", img:"https://i.imgur.com/ExbaI6W.png"},
+  {name:"石田 亮太(RYOTA)", img:"https://i.imgur.com/Ctw95jF.png"},
+  {name:"岡戸 竜芽(RYUGA)", img:"https://i.imgur.com/gyPHKjY.png"},
+  {name:"杉山 竜司(RYUJI)", img:"https://i.imgur.com/NeB980M.png"},
+  {name:"香月 誠太(SEITA)", img:"https://i.imgur.com/def6F6u.png"},
+  {name:"澤井 星名(SENA)", img:"https://i.imgur.com/Dpzzr9K.png"},
+  {name:"オ・シンヘン(SHINHAENG)", img:"https://i.imgur.com/LH673dA.png"},
+  {name:"岩城 慎二(SHINJI)", img:"https://i.imgur.com/h5rDvjC.png"},
+  {name:"宮崎 真佑(SHINSUKE)", img:"https://i.imgur.com/xJuj9wW.png"},
+  {name:"西﨑 柊(N.SHU)", img:"https://i.imgur.com/OZrHFUX.png"},
+  {name:"山下 柊(Y.SHU)", img:"https://i.imgur.com/642IX8o.png"},
+  {name:"パク・シヨン(SIYOUNG)", img:"https://i.imgur.com/wSokxJh.png"},
+  {name:"佐藤 碧空 (S.SORA)", img:"https://i.imgur.com/yF4WJJB.png"}
 ];
 
 const rowSizes = [1,2,3,5];
