--- a/index.html
+++ b/index.html
@@ -566,26 +566,29 @@ const trainees = [
   {name:"小清水 蓮(KO.REN)", img:"https://i.imgur.com/S8Ij9OZ.png"},
   {name:"チェン・リッキー(RICKEY)", img:"https://i.imgur.com/DnnZVAT.png"},
 
-  /* ▼ 今回追加19人（ここから） */
-  {name:"神元 理丘(RIKU)", img:"https://i.imgur.com/jwJ9CLd.png"},
-  {name:"鳩場 陸人(H.RIKUTO)", img:"https://i.imgur.com/JdCFbCb.png"},
-  {name:"今江 陸斗(I.RIKUTO)", img:"https://i.imgur.com/jiZZwJu.png"},
-  {name:"甲斐 陸也(RIKUYA)", img:"https://i.imgur.com/lfiqB2f.png"},
-  {name:"大瀬 凜和(RINTO)", img:"https://i.imgur.com/OT0UHId.png"},
-  {name:"上野 琉偉(U.RUI)", img:"https://i.imgur.com/36XqMd9.png"},
-  {name:"飯塚 亮賀(RYOGA)", img:"https://i.imgur.com/ExbaI6W.png"},
-  {name:"石田 亮太(RYOTA)", img:"https://i.imgur.com/Ctw95jF.png"},
-  {name:"岡戸 竜芽(RYUGA)", img:"https://i.imgur.com/gyPHKjY.png"},
-  {name:"杉山 竜司(RYUJI)", img:"https://i.imgur.com/NeB980M.png"},
-  {name:"香月 誠太(SEITA)", img:"https://i.imgur.com/def6F6u.png"},
-  {name:"澤井 星名(SENA)", img:"https://i.imgur.com/Dpzzr9K.png"},
-  {name:"オ・シンヘン(SHINHAENG)", img:"https://i.imgur.com/LH673dA.png"},
-  {name:"岩城 慎二(SHINJI)", img:"https://i.imgur.com/h5rDvjC.png"},
-  {name:"宮崎 真佑(SHINSUKE)", img:"https://i.imgur.com/xJuj9wW.png"},
-  {name:"西﨑 柊(N.SHU)", img:"https://i.imgur.com/OZrHFUX.png"},
-  {name:"山下 柊(Y.SHU)", img:"https://i.imgur.com/642IX8o.png"},
-  {name:"パク・シヨン(SIYOUNG)", img:"https://i.imgur.com/wSokxJh.png"},
-  {name:"佐藤 碧空 (S.SORA)", img:"https://i.imgur.com/yF4WJJB.png"}
+  /* ===== 今回追加22人 ===== */
+  {name:"東野 蒼汰(SOTA)", img:"https://i.imgur.com/GvLpwfo.png"},
+  {name:"藤牧 大雅(F.TAIGA)", img:"https://i.imgur.com/4G2hBRy.png"},
+  {name:"松田 太雅(M.TAIGA)", img:"https://i.imgur.com/tICsJFs.png"},
+  {name:"金倉 拓未(TAKUMI)", img:"https://i.imgur.com/O3gluG7.png"},
+  {name:"熊部 拓斗(K.TAKUTO)", img:"https://i.imgur.com/NaQURc7.png"},
+  {name:"宮里 拓利(M.TAKUTO)", img:"https://i.imgur.com/5B8NMyF.png"},
+  {name:"南平 達矢(TATSUYA)", img:"https://i.imgur.com/jHnmGTs.png"},
+  {name:"森井 輝(TERU)", img:"https://i.imgur.com/SAo1Rs4.png"},
+  {name:"北林 天虎(TETORA)", img:"https://i.imgur.com/2gCwqHF.png"},
+  {name:"藤芳 辰弥(TOKIYA)", img:"https://i.imgur.com/9prpjvI.png"},
+  {name:"増田 倫希(TOMOKI)", img:"https://i.imgur.com/4JSh3HD.png"},
+  {name:"濱田 永遠(TOWA)", img:"https://i.imgur.com/Yap9beM.png"},
+  {name:"アギナルド・トリスタン・ジェームス(TRISTAN)", img:"https://i.imgur.com/wyeHbRo.png"},
+  {name:"リー・ウェイゼ(WEIZE)", img:"https://i.imgur.com/XNeHaaX.png"},
+  {name:"ヨハン・エマニュエル(YOHAN)", img:"https://i.imgur.com/RTVMTCA.png"},
+  {name:"矢田 佳暉(YOSHIKI)", img:"https://i.imgur.com/MZbSVDq.png"},
+  {name:"後藤 結(YUKI)", img:"https://i.imgur.com/GZTdD57.png"},
+  {name:"岡田 侑磨(YUMA)", img:"https://i.imgur.com/3hhNQLj.png"},
+  {name:"安部 結蘭(YURA)", img:"https://i.imgur.com/pbC301p.png"},
+  {name:"大林 悠成(O.YUSEI)", img:"https://i.imgur.com/tp1fKqI.png"},
+  {name:"佐野 由征(S.YUSEI)", img:"https://i.imgur.com/fDql5Tu.png"},
+  {name:"板倉 悠太(YUTA)", img:"https://i.imgur.com/j6IlxeD.png"}
 ];
 
 const rowSizes = [1,2,3,5];
