--- a/index.html
+++ b/index.html
@@ -254,13 +254,18 @@
     background:transparent;
   }
 
-  #membersWrap{
-    max-height: 52vh;
-    overflow:auto;
-    -webkit-overflow-scrolling: touch;
-    border-top:1px solid #f1f1f1;
-    padding-top: 10px;
-  }
+#membersWrap{
+  max-height: 52vh;
+  overflow:auto;
+  -webkit-overflow-scrolling: touch;
+  border-top:1px solid #f1f1f1;
+  padding-top: 10px;
+
+  background-image: url("https://i.imgur.com/eJnRfv3.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
   /* =========================
      ★ ここが「2列カード」用
