--- a/index.html
+++ b/index.html
@@ -508,6 +508,119 @@
     color:#666;
     z-index: 50;
   }
+
+  /* =========================
+     ★ 合言葉ポップアップ（追加）
+     ========================= */
+  #passOverlay{
+    position: fixed;
+    inset: 0;
+    z-index: 99999;
+    display: none; /* JSで表示 */
+    align-items: center;
+    justify-content: center;
+    padding: 18px;
+    background: rgba(0,0,0,.45);
+    backdrop-filter: blur(10px);
+  }
+  #passModal{
+    width: min(520px, 100%);
+    border-radius: 18px;
+    background: rgba(255,255,255,.88);
+    border: 1px solid rgba(255,255,255,.75);
+    box-shadow: 0 18px 60px rgba(0,0,0,.22);
+    overflow: hidden;
+  }
+  .passHead{
+    padding: 16px 16px 10px;
+    border-bottom: 1px solid rgba(0,0,0,.06);
+  }
+  .passTitle{
+    margin:0;
+    font-size: 16px;
+    font-weight: 900;
+  }
+  .passSub{
+    margin:8px 0 0;
+    font-size: 13px;
+    color: #444;
+    line-height: 1.4;
+  }
+  .passBody{
+    padding: 14px 16px 16px;
+  }
+  .passNote{
+    font-size: 12px;
+    color: #666;
+    margin-bottom: 10px;
+  }
+  .passRow{
+    display:flex;
+    gap: 10px;
+    align-items: center;
+  }
+  #passInput{
+    flex: 1;
+    height: 46px;
+    border-radius: 12px;
+    border: 1px solid rgba(0,0,0,.15);
+    background: rgba(255,255,255,.92);
+    padding: 0 12px;
+    font-size: 18px;
+    font-weight: 900;
+    letter-spacing: .25em;
+    outline: none;
+  }
+  .passBtn{
+    height: 46px;
+    border-radius: 12px;
+    border: 1px solid rgba(0,0,0,.15);
+    background: rgba(255,255,255,.92);
+    padding: 0 14px;
+    font-size: 14px;
+    font-weight: 900;
+    white-space: nowrap;
+  }
+  .passBtn.primary{
+    border-color: rgba(0,128,255,.25);
+    color: #0a66ff;
+  }
+  .passErr{
+    margin-top: 10px;
+    font-size: 13px;
+    color: #d60000;
+    font-weight: 900;
+    display:none;
+  }
+  .passFoot{
+    padding: 12px 16px 16px;
+    border-top: 1px solid rgba(0,0,0,.06);
+    display:flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .tiktokHint{
+    font-size: 13px;
+    color: #333;
+    font-weight: 900;
+  }
+  .tiktokBtn{
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    gap: 8px;
+    padding: 10px 12px;
+    border-radius: 12px;
+    border: 1px solid rgba(0,0,0,.15);
+    background: rgba(255,255,255,.92);
+    font-size: 14px;
+    font-weight: 900;
+    text-decoration: none;
+    color: #111;
+  }
+  .tiktokBtn:active{ transform: scale(.98); }
 </style>
 </head>
 
@@ -567,6 +680,30 @@
   </div>
 </div>
 
+<!-- =========================
+     ★ 合言葉ポップアップ（追加）
+     ========================= -->
+<div id="passOverlay" aria-hidden="true">
+  <div id="passModal" role="dialog" aria-modal="true" aria-label="合言葉入力">
+    <div class="passHead">
+      <p class="passTitle">合言葉を入力</p>
+      <p class="passSub">最新動画から合言葉を確認してね！</p>
+    </div>
+    <div class="passBody">
+      <div class="passNote">※合言葉は定期的に更新されます</div>
+      <div class="passRow">
+        <input id="passInput" inputmode="numeric" maxlength="4" placeholder="••••" autocomplete="one-time-code" />
+        <button class="passBtn primary" type="button" onclick="checkPass()">OK</button>
+      </div>
+      <div class="passErr" id="passErr">合言葉が違います</div>
+    </div>
+    <div class="passFoot">
+      <div class="tiktokHint">TikTokへ移動して確認</div>
+      <a class="tiktokBtn" href="https://www.tiktok.com/@12agassi" target="_blank" rel="noopener noreferrer">TikTokへ移動</a>
+    </div>
+  </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
 <script>
@@ -574,6 +711,75 @@ const HEADER_IMAGE_URL = "https://i.imgur.com/nYBRUdd.png";
 
 /* ★追加：練習生候補は画像URLが未指定でも壊れないようにダミーを用意 */
 const FALLBACK_IMG = "data:image/gif;base64,R0lGODlhAQABAAAAACw=";
+
+/* =========================
+   ★ 合言葉（追加）
+   ここだけ変えればOK
+   ========================= */
+const PASSPHRASE = "2851";               // ← 合言葉（4桁）
+const PASS_SESSION_KEY = "oshimaker_pass_ok_v1"; // セッション中だけ保持
+
+function showPassModal(){
+  var ov = document.getElementById("passOverlay");
+  var input = document.getElementById("passInput");
+  var err = document.getElementById("passErr");
+  if(err) err.style.display = "none";
+  if(ov){
+    ov.style.display = "flex";
+    ov.setAttribute("aria-hidden","false");
+  }
+  if(input){
+    input.value = "";
+    setTimeout(function(){ input.focus(); }, 50);
+  }
+}
+
+function hidePassModal(){
+  var ov = document.getElementById("passOverlay");
+  if(ov){
+    ov.style.display = "none";
+    ov.setAttribute("aria-hidden","true");
+  }
+}
+
+function checkPass(){
+  var input = document.getElementById("passInput");
+  var err = document.getElementById("passErr");
+  var v = (input ? input.value : "").replace(/\D/g,"").slice(0,4);
+
+  if(v === String(PASSPHRASE)){
+    try{ sessionStorage.setItem(PASS_SESSION_KEY, "1"); }catch(e){}
+    hidePassModal();
+    return;
+  }
+  if(err) err.style.display = "block";
+  if(input){
+    input.value = "";
+    input.focus();
+  }
+}
+
+/* EnterキーでもOK */
+(function wirePassEnter(){
+  var input = document.getElementById("passInput");
+  if(!input) return;
+  input.addEventListener("input", function(){
+    this.value = this.value.replace(/\D/g,"").slice(0,4);
+  });
+  input.addEventListener("keydown", function(e){
+    if(e.key === "Enter") checkPass();
+  });
+})();
+
+/* 初回表示：合言葉が通ってなければブロック */
+(function bootPass(){
+  var ok = false;
+  try{ ok = sessionStorage.getItem(PASS_SESSION_KEY) === "1"; }catch(e){}
+  if(!ok){
+    // DOMが描画されてから出す
+    window.addEventListener("load", function(){ showPassModal(); }, {once:true});
+  }
+})();
 
 /* 公式プロフィールURL組み立て */
 function profileUrl(pid){
