--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   .pyramidWrap{
     padding: 12px 14px 8px;
 
-    /* ★背景画像追加（ここだけ追加） */
+    /* ★背景画像（ピラミッド部分） */
     background-image: url("https://i.imgur.com/lFGbXfI.png");
     background-size: cover;
     background-position: center;
@@ -120,7 +120,7 @@
     text-align:center;
   }
 
-  /* ★枠色を #0080ff に（白枠→青枠） */
+  /* ★枠色を #0080ff に */
   .avatar{
     width: var(--slot);
     height: var(--slot);
@@ -254,21 +254,22 @@
     background:transparent;
   }
 
-#membersWrap{
-  max-height: 52vh;
-  overflow:auto;
-  -webkit-overflow-scrolling: touch;
-  border-top:1px solid #f1f1f1;
-  padding-top: 10px;
+  /* 一覧スクロール領域（背景画像） */
+  #membersWrap{
+    max-height: 52vh;
+    overflow:auto;
+    -webkit-overflow-scrolling: touch;
+    border-top:1px solid #f1f1f1;
+    padding-top: 10px;
 
-  background-image: url("https://i.imgur.com/eJnRfv3.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+    background-image: url("https://i.imgur.com/eJnRfv3.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 
   /* =========================
-     ★ ここが「2列カード」用
+     ★ 2列カード
      ========================= */
   #members{
     display:grid;
@@ -383,7 +384,6 @@
     background:#fff;
     overflow:hidden;
 
-    /* ★背景画像追加（ここだけ追加） */
     background-image: url("https://i.imgur.com/lFGbXfI.png");
     background-size: cover;
     background-position: center;
@@ -499,7 +499,7 @@
   .exportEmpty .exportRank{display:none;}
   .exportEmpty .exportName{display:none;}
 
-  /* ★保存した画像の左下に created by を表示（既に入ってる） */
+  /* ★保存した画像の左下に created by */
   .exportFooter{
     position:absolute;
     left: 24px;
@@ -510,121 +510,193 @@
   }
 
   /* =========================
-     ★ 合言葉ポップアップ（追加）
+     ★ 合言葉ロックUI + 解除演出
      ========================= */
-  #passOverlay{
+  body.locked{
+    overflow: hidden;
+    touch-action: none;
+  }
+
+  #lockOverlay{
     position: fixed;
     inset: 0;
     z-index: 99999;
-    display: none; /* JSで表示 */
+    display: none;
     align-items: center;
     justify-content: center;
     padding: 18px;
-    background: rgba(0,0,0,.45);
+    background: rgba(0,0,0,.52);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
   }
-  #passModal{
-    width: min(520px, 100%);
+  #lockOverlay.show{ display:flex; }
+
+  .lockCard{
+    width: min(460px, 100%);
     border-radius: 18px;
-    background: rgba(255,255,255,.88);
-    border: 1px solid rgba(255,255,255,.75);
-    box-shadow: 0 18px 60px rgba(0,0,0,.22);
+    background: rgba(255,255,255,.92);
+    border: 1px solid rgba(255,255,255,.60);
+    box-shadow: 0 18px 50px rgba(0,0,0,.22);
     overflow: hidden;
   }
-  .passHead{
-    padding: 16px 16px 10px;
+  .lockHead{
+    padding: 14px 14px 10px;
     border-bottom: 1px solid rgba(0,0,0,.06);
+    background:
+      radial-gradient(circle at 20% 30%, rgba(255,120,200,.24), transparent 45%),
+      radial-gradient(circle at 80% 40%, rgba(120,160,255,.22), transparent 50%),
+      linear-gradient(135deg, rgba(255,255,255,.92), rgba(245,248,255,.92));
   }
-  .passTitle{
+  .lockTitle{
     margin:0;
+    font-weight: 1000;
+    letter-spacing: .04em;
     font-size: 16px;
-    font-weight: 900;
   }
-  .passSub{
-    margin:8px 0 0;
-    font-size: 13px;
-    color: #444;
-    line-height: 1.4;
-  }
-  .passBody{
-    padding: 14px 16px 16px;
-  }
-  .passNote{
+  .lockNote{
+    margin: 8px 0 0;
     font-size: 12px;
-    color: #666;
-    margin-bottom: 10px;
+    color: #555;
+    font-weight: 700;
   }
-  .passRow{
+
+  .lockBody{
+    padding: 14px;
+  }
+  .lockLabel{
+    margin: 0 0 8px;
+    font-size: 13px;
+    font-weight: 900;
+    color:#222;
+  }
+  .lockInputRow{
     display:flex;
     gap: 10px;
     align-items: center;
   }
   #passInput{
-    flex: 1;
-    height: 46px;
+    flex:1;
+    padding: 12px 12px;
     border-radius: 12px;
-    border: 1px solid rgba(0,0,0,.15);
-    background: rgba(255,255,255,.92);
-    padding: 0 12px;
-    font-size: 18px;
-    font-weight: 900;
-    letter-spacing: .25em;
+    border: 1px solid rgba(0,0,0,.14);
     outline: none;
-  }
-  .passBtn{
-    height: 46px;
-    border-radius: 12px;
-    border: 1px solid rgba(0,0,0,.15);
+    font-size: 16px;
     background: rgba(255,255,255,.92);
-    padding: 0 14px;
-    font-size: 14px;
+  }
+  #unlockBtn{
+    padding: 12px 14px;
+    border-radius: 12px;
+    border: 1px solid rgba(0,0,0,.14);
+    background: #fff;
     font-weight: 900;
-    white-space: nowrap;
   }
-  .passBtn.primary{
-    border-color: rgba(0,128,255,.25);
-    color: #0a66ff;
-  }
-  .passErr{
-    margin-top: 10px;
+  #unlockBtn:active{ transform: scale(.98); }
+
+  .lockHint{
+    margin: 12px 0 0;
     font-size: 13px;
-    color: #d60000;
-    font-weight: 900;
-    display:none;
-  }
-  .passFoot{
-    padding: 12px 16px 16px;
-    border-top: 1px solid rgba(0,0,0,.06);
-    display:flex;
-    gap: 10px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .tiktokHint{
-    font-size: 13px;
-    color: #333;
-    font-weight: 900;
+    font-weight: 800;
+    color:#333;
   }
   .tiktokBtn{
     display:inline-flex;
     align-items:center;
     justify-content:center;
-    gap: 8px;
-    padding: 10px 12px;
-    border-radius: 12px;
-    border: 1px solid rgba(0,0,0,.15);
-    background: rgba(255,255,255,.92);
-    font-size: 14px;
-    font-weight: 900;
+    margin-top: 10px;
+    padding: 12px 14px;
+    border-radius: 14px;
+    background: #111;
+    color: #fff;
     text-decoration: none;
-    color: #111;
+    font-weight: 1000;
+    letter-spacing: .02em;
   }
   .tiktokBtn:active{ transform: scale(.98); }
+
+  .lockErr{
+    margin-top: 10px;
+    font-size: 12px;
+    font-weight: 900;
+    color: #d40000;
+    display:none;
+  }
+  .lockErr.show{ display:block; }
+
+  /* 解除演出（暗転→文字→ふわっと消える） */
+  #unlockFx{
+    position: fixed;
+    inset: 0;
+    z-index: 100000;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0,0,0,.78);
+  }
+  #unlockFx.show{ display:flex; }
+
+  .fxText{
+    font-weight: 1000;
+    letter-spacing: .14em;
+    color: rgba(255,255,255,.95);
+    font-size: 22px;
+    padding: 14px 18px;
+    border-radius: 999px;
+    border: 1px solid rgba(255,255,255,.28);
+    background: rgba(255,255,255,.06);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    animation: fxPop 900ms ease forwards;
+  }
+  @keyframes fxPop{
+    0%   { opacity: 0; transform: translateY(10px) scale(.96); filter: blur(6px); }
+    45%  { opacity: 1; transform: translateY(0) scale(1.00); filter: blur(0); }
+    100% { opacity: 0; transform: translateY(-6px) scale(1.02); filter: blur(4px); }
+  }
+
+  /* 本体が「ふわっと開く」 */
+  #app{
+    opacity: 1;
+    transform: none;
+    filter: none;
+    transition: opacity 420ms ease, transform 420ms ease, filter 420ms ease;
+  }
+  body.locked #app{
+    opacity: 0;
+    transform: translateY(10px) scale(.99);
+    filter: blur(6px);
+    pointer-events: none;
+    user-select: none;
+  }
 </style>
 </head>
 
 <body>
+<!-- ★合言葉ロック -->
+<div id="lockOverlay" aria-hidden="false">
+  <div class="lockCard" role="dialog" aria-modal="true">
+    <div class="lockHead">
+      <h2 class="lockTitle">推しメーカーを使うには合言葉が必要です</h2>
+      <p class="lockNote">※合言葉は定期的に更新されます</p>
+    </div>
+    <div class="lockBody">
+      <p class="lockLabel">合言葉を入力</p>
+      <div class="lockInputRow">
+        <input id="passInput" type="text" inputmode="text" autocomplete="off" autocapitalize="none" spellcheck="false" placeholder="例：MYTOP11" />
+        <button id="unlockBtn" type="button">解除</button>
+      </div>
+      <div id="passErr" class="lockErr">合言葉が違います</div>
+
+      <div class="lockHint">最新動画から合言葉を確認してね！</div>
+      <a class="tiktokBtn" href="https://www.tiktok.com/@12agassi" target="_blank" rel="noopener noreferrer">TikTokへ移動</a>
+    </div>
+  </div>
+</div>
+
+<!-- ★解除演出 -->
+<div id="unlockFx" aria-hidden="true">
+  <div class="fxText">PRODUCE101JAPAN</div>
+</div>
+
 <header>
   <div class="topbar">
     <h1>日プ新世界 推しメーカー</h1>
@@ -632,37 +704,40 @@
   </div>
 </header>
 
-<main>
-  <div class="card" id="pyramidCard">
-    <div id="banner" class="banner">
-      <div class="bannerTitle">AUDITION PICK • YOUR TOP 11</div>
-    </div>
-
-    <div class="pyramidWrap" id="pyramidWrap">
-      <div class="pyramid" id="pyramid"></div>
-    </div>
-
-    <div class="actions">
-      <button class="primary" onclick="saveImage()">画像として保存</button>
-      <button onclick="undo()">1人戻す</button>
-      <button class="danger" onclick="resetAll()">リセット</button>
-      <button class="mode" id="reorderBtn" onclick="toggleReorder()">並び替えモード：OFF</button>
-    </div>
-  </div>
-
-  <div class="listCard">
-    <div class="searchRow">
-      <div class="search">
-        <input id="search" type="text" placeholder="Search" oninput="drawMembers()" />
+<!-- ★アプリ本体 -->
+<div id="app">
+  <main>
+    <div class="card" id="pyramidCard">
+      <div id="banner" class="banner">
+        <div class="bannerTitle">AUDITION PICK • YOUR TOP 11</div>
       </div>
-      <!-- ★追加：練習生/練習生候補の切替ボタン（1つ） -->
-      <button class="mode" id="toggleListBtn" type="button" onclick="toggleCandidates(event)">練習生候補</button>
+
+      <div class="pyramidWrap" id="pyramidWrap">
+        <div class="pyramid" id="pyramid"></div>
+      </div>
+
+      <div class="actions">
+        <button class="primary" onclick="saveImage()">画像として保存</button>
+        <button onclick="undo()">1人戻す</button>
+        <button class="danger" onclick="resetAll()">リセット</button>
+        <button class="mode" id="reorderBtn" onclick="toggleReorder()">並び替えモード：OFF</button>
+      </div>
     </div>
-    <div id="membersWrap">
-      <div id="members"></div>
+
+    <div class="listCard">
+      <div class="searchRow">
+        <div class="search">
+          <input id="search" type="text" placeholder="Search" oninput="drawMembers()" />
+        </div>
+        <!-- ★練習生/練習生候補の切替ボタン -->
+        <button class="mode" id="toggleListBtn" type="button" onclick="toggleCandidates(event)">練習生候補</button>
+      </div>
+      <div id="membersWrap">
+        <div id="members"></div>
+      </div>
     </div>
-  </div>
-</main>
+  </main>
+</div>
 
 <div class="toast" id="toast">画像を生成中…</div>
 
@@ -680,106 +755,19 @@
   </div>
 </div>
 
-<!-- =========================
-     ★ 合言葉ポップアップ（追加）
-     ========================= -->
-<div id="passOverlay" aria-hidden="true">
-  <div id="passModal" role="dialog" aria-modal="true" aria-label="合言葉入力">
-    <div class="passHead">
-      <p class="passTitle">合言葉を入力</p>
-      <p class="passSub">最新動画から合言葉を確認してね！</p>
-    </div>
-    <div class="passBody">
-      <div class="passNote">※合言葉は定期的に更新されます</div>
-      <div class="passRow">
-        <input id="passInput" inputmode="numeric" maxlength="4" placeholder="••••" autocomplete="one-time-code" />
-        <button class="passBtn primary" type="button" onclick="checkPass()">OK</button>
-      </div>
-      <div class="passErr" id="passErr">合言葉が違います</div>
-    </div>
-    <div class="passFoot">
-      <div class="tiktokHint">TikTokへ移動して確認</div>
-      <a class="tiktokBtn" href="https://www.tiktok.com/@12agassi" target="_blank" rel="noopener noreferrer">TikTokへ移動</a>
-    </div>
-  </div>
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
 <script>
+/* =========================
+   ★ 合言葉設定（ここだけ変えればOK）
+   ========================= */
+const PASSPHRASE = "MYTOP11";  // ←好きな文字列に変更OK（英数字OK）
+const PASS_STORAGE_KEY = "oshimaker_pass_ok_v1"; // 解除状態保存
+
 const HEADER_IMAGE_URL = "https://i.imgur.com/nYBRUdd.png";
 
-/* ★追加：練習生候補は画像URLが未指定でも壊れないようにダミーを用意 */
+/* ★画像URLが未指定でも壊れないダミー */
 const FALLBACK_IMG = "data:image/gif;base64,R0lGODlhAQABAAAAACw=";
-
-/* =========================
-   ★ 合言葉（追加）
-   ここだけ変えればOK
-   ========================= */
-const PASSPHRASE = "2851";               // ← 合言葉（4桁）
-const PASS_SESSION_KEY = "oshimaker_pass_ok_v1"; // セッション中だけ保持
-
-function showPassModal(){
-  var ov = document.getElementById("passOverlay");
-  var input = document.getElementById("passInput");
-  var err = document.getElementById("passErr");
-  if(err) err.style.display = "none";
-  if(ov){
-    ov.style.display = "flex";
-    ov.setAttribute("aria-hidden","false");
-  }
-  if(input){
-    input.value = "";
-    setTimeout(function(){ input.focus(); }, 50);
-  }
-}
-
-function hidePassModal(){
-  var ov = document.getElementById("passOverlay");
-  if(ov){
-    ov.style.display = "none";
-    ov.setAttribute("aria-hidden","true");
-  }
-}
-
-function checkPass(){
-  var input = document.getElementById("passInput");
-  var err = document.getElementById("passErr");
-  var v = (input ? input.value : "").replace(/\D/g,"").slice(0,4);
-
-  if(v === String(PASSPHRASE)){
-    try{ sessionStorage.setItem(PASS_SESSION_KEY, "1"); }catch(e){}
-    hidePassModal();
-    return;
-  }
-  if(err) err.style.display = "block";
-  if(input){
-    input.value = "";
-    input.focus();
-  }
-}
-
-/* EnterキーでもOK */
-(function wirePassEnter(){
-  var input = document.getElementById("passInput");
-  if(!input) return;
-  input.addEventListener("input", function(){
-    this.value = this.value.replace(/\D/g,"").slice(0,4);
-  });
-  input.addEventListener("keydown", function(e){
-    if(e.key === "Enter") checkPass();
-  });
-})();
-
-/* 初回表示：合言葉が通ってなければブロック */
-(function bootPass(){
-  var ok = false;
-  try{ ok = sessionStorage.getItem(PASS_SESSION_KEY) === "1"; }catch(e){}
-  if(!ok){
-    // DOMが描画されてから出す
-    window.addEventListener("load", function(){ showPassModal(); }, {once:true});
-  }
-})();
 
 /* 公式プロフィールURL組み立て */
 function profileUrl(pid){
@@ -787,7 +775,7 @@ function profileUrl(pid){
   return "https://produce101.jp/profile/detail/?lang=ja&id=" + encodeURIComponent(pid);
 }
 
-/* ====== 既存 trainees を分離：練習生（全員＋あなたが追加した分含む） ====== */
+/* ====== traineesOnly（練習生） ====== */
 const traineesOnly = [
   {name:"アダム・ナガイ(ADAM)", img:"https://i.imgur.com/6QGzvRx.png", pid:"adamnagai"},
   {name:"中丸 晏寿(AJU)", img:"https://i.imgur.com/KiZCKos.png", pid:"nakamaruaju"},
@@ -806,7 +794,6 @@ const traineesOnly = [
   {name:"小笠原ジュゼッペ慧(GIUSEPPE)", img:"https://i.imgur.com/2oKn3Ma.jpeg", pid:"ogasawaragiuseppekei"},
   {name:"倉橋 吾槙(GOTEN)", img:"https://i.imgur.com/hlEjYqR.png", pid:"kurahashigoten"},
   {name:"堀尾 聖(HIJIRI)", img:"https://i.imgur.com/5Qb5dRJ.png", pid:"horiohijiri"},
-  /* ★修正：瑞慶覧 太都 の画像URL */
   {name:"瑞慶覧 太都(HIROTO)", img:"https://i.imgur.com/siOPGIr.png", pid:"zukeranhiroto"},
   {name:"ユ・ヒョンスン(HYEONSEUNG)", img:"https://i.imgur.com/lY3lXLj.png", pid:"yoohyeonseung"},
   {name:"岡田 彪吾(HYUGO)", img:"https://i.imgur.com/zalwc1W.png", pid:"okadahyugo"},
@@ -880,7 +867,7 @@ const traineesOnly = [
   {name:"板倉 悠太(YUTA)", img:"https://i.imgur.com/j6IlxeD.png", pid:"itakurayuta"}
 ];
 
-/* ★追加：練習生候補（最新版フル：画像URLすべて反映済み） */
+/* ====== candidates（練習生候補） ====== */
 const candidates = [
   {name:"本荘 晃(AKIRA)", img:"https://i.imgur.com/p976l8j.jpeg", pid:"honjoakira"},
   {name:"児島 歩夢(K.AYUMU)", img:"https://i.imgur.com/1jtcgbB.png", pid:"kojimaayumu"},
@@ -923,7 +910,7 @@ const candidates = [
   {name:"岡本 佑斗(YUTO)", img:"https://i.imgur.com/lzv8Vu5.png", pid:"okamotoyuto"}
 ];
 
-/* ★既存ロジックは trainees を参照しているので、結合して維持 */
+/* trainees = 結合 */
 const trainees = traineesOnly.concat(candidates);
 const TRAINEES_COUNT = traineesOnly.length;
 
@@ -933,7 +920,7 @@ const STORAGE_KEY = "oshimaker_selected_final_v5";
 let reorderMode = false;
 let selected = loadSelected();
 
-/* ★追加：表示切替状態（初期は練習生表示） */
+/* 表示切替状態（初期は練習生表示） */
 let showingCandidates = false;
 
 /* バナー画像反映 */
@@ -955,7 +942,7 @@ function alphaPart(full){
   return m ? "(" + m[1] + ")" : "";
 }
 
-/* ★追加：練習生/練習生候補 切替（スクロール位置も維持） */
+/* 練習生/候補 切替（スクロール位置も維持） */
 function toggleCandidates(e){
   if(e && e.preventDefault) e.preventDefault();
 
@@ -1023,7 +1010,7 @@ function fitPyramidToViewport(){
 }
 
 /* =========================
-   ★ 2列カード描画 + profile
+   2列カード描画 + profile
    ========================= */
 function drawMembers(){
   var qEl = document.getElementById("search");
@@ -1031,7 +1018,6 @@ function drawMembers(){
   var membersEl = document.getElementById("members");
   membersEl.innerHTML = "";
 
-  /* ★表示中リストの範囲だけ出す（indexは結合配列のものを保持） */
   var start = showingCandidates ? TRAINEES_COUNT : 0;
   var end   = showingCandidates ? trainees.length : TRAINEES_COUNT;
 
@@ -1058,7 +1044,7 @@ function drawMembers(){
     /* カード本体タップで追加 */
     card.addEventListener("click", (function(idx){ return function(){ add(idx); }; })(i));
 
-    /* profile 押した時に追加が発火しないように止める */
+    /* profile押下で追加が発火しないように止める */
     var link = card.querySelector(".profileLink");
     if(link){
       link.addEventListener("click", function(ev){
@@ -1231,12 +1217,95 @@ async function saveImage(){
   }
 }
 
-/* 初期描画 */
+/* =========================
+   ★ 合言葉ロック制御
+   ========================= */
+function norm(s){
+  return (s || "").trim();
+}
+function isUnlocked(){
+  try{ return localStorage.getItem(PASS_STORAGE_KEY) === "1"; }catch(e){ return false; }
+}
+function setUnlocked(){
+  try{ localStorage.setItem(PASS_STORAGE_KEY, "1"); }catch(e){}
+}
+function showLock(){
+  document.body.classList.add("locked");
+  document.getElementById("lockOverlay").classList.add("show");
+  document.getElementById("passErr").classList.remove("show");
+  var inp = document.getElementById("passInput");
+  inp.value = "";
+  setTimeout(function(){ inp.focus(); }, 120);
+}
+function hideLockWithFx(){
+  // ロック画面を閉じる→演出→本体ふわっと表示
+  document.getElementById("lockOverlay").classList.remove("show");
+
+  var fx = document.getElementById("unlockFx");
+  fx.classList.add("show");
+
+  // 900msアニメ＋少し余裕
+  setTimeout(function(){
+    fx.classList.remove("show");
+    document.body.classList.remove("locked");
+  }, 980);
+}
+function tryUnlock(){
+  var val = norm(document.getElementById("passInput").value);
+  var ok = (val === PASSPHRASE);
+
+  if(ok){
+    setUnlocked();
+    hideLockWithFx();
+  }else{
+    var err = document.getElementById("passErr");
+    err.classList.add("show");
+    // ちょい揺れ感（簡易）
+    var card = document.querySelector(".lockCard");
+    if(card){
+      card.animate(
+        [
+          {transform:"translateX(0)"},
+          {transform:"translateX(-6px)"},
+          {transform:"translateX(6px)"},
+          {transform:"translateX(-4px)"},
+          {transform:"translateX(4px)"},
+          {transform:"translateX(0)"}
+        ],
+        {duration: 260, easing:"ease-out"}
+      );
+    }
+  }
+}
+
+/* =========================
+   初期描画
+   ========================= */
 drawMembers();
 drawPyramid();
 drawExportPyramid();
 fitPyramidToViewport();
 window.addEventListener("resize", function(){ fitPyramidToViewport(); });
+
+/* ロック初期化 */
+(function initLock(){
+  var btn = document.getElementById("unlockBtn");
+  var inp = document.getElementById("passInput");
+
+  btn.addEventListener("click", tryUnlock);
+  inp.addEventListener("keydown", function(e){
+    if(e.key === "Enter") tryUnlock();
+  });
+
+  // 未解除ならロック表示
+  if(!isUnlocked()){
+    showLock();
+  }else{
+    // 解除済みならロック状態にしない
+    document.body.classList.remove("locked");
+    document.getElementById("lockOverlay").classList.remove("show");
+  }
+})();
 </script>
 </body>
 </html>
