--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 /* =========================
    ★ 合言葉設定（ここだけ変えればOK）
    ========================= */
-const PASSPHRASE = "MYTOP11";  // ←好きな文字列に変更OK（英数字OK）
+const PASSPHRASE = "NEWSTAR";  // ←好きな文字列に変更OK（英数字OK）
 const PASS_STORAGE_KEY = "oshimaker_pass_ok_v1"; // 解除状態保存
 
 const HEADER_IMAGE_URL = "https://i.imgur.com/nYBRUdd.png";
