--- a/index.html
+++ b/index.html
@@ -761,8 +761,10 @@
 /* =========================
    ★ 合言葉設定（ここだけ変えればOK）
    ========================= */
-const PASSPHRASE = "NEWSTAR";  // ←好きな文字列に変更OK（英数字OK）
-const PASS_STORAGE_KEY = "oshimaker_pass_ok_v1"; // 解除状態保存
+const PASSPHRASE = "NEWSTAR";
+const PASS_STORAGE_KEY = "oshimaker_pass_ok_v1"; // 解除済みフラグ
+const PASS_TIME_KEY = "oshimaker_pass_ok_time_v1"; // ★解除時刻
+const PASS_TTL_MS = 60 * 60 * 1000; // ★1時間（ミリ秒）
 
 const HEADER_IMAGE_URL = "https://i.imgur.com/nYBRUdd.png";
 
