--- a/index.html
+++ b/index.html
@@ -1190,6 +1190,9 @@ function drawExportPyramid(){
 }
 
 async function saveImage(){
+
+  alert("【お願い】\nSNSに投稿する際は\n#日プ新世界推しメーカー\nのタグを付けて投稿をお願いいたします🙇🏻‍♀️");
+
   if(typeof html2canvas === "undefined"){
     alert("画像保存ライブラリの読み込みに失敗しました。");
     return;
