--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 /* =========================
    ★ 合言葉設定（ここだけ変えればOK）
    ========================= */
-const PASSPHRASE = "PICKME11";
+const PASSPHRASE = "P1CKYOU";
 const PASS_STORAGE_KEY = "oshimaker_pass_ok_v1"; // 解除済みフラグ
 const PASS_TIME_KEY = "oshimaker_pass_ok_time_v1"; // ★解除時刻
 const PASS_TTL_MS = 60 * 60 * 1000; // ★1時間（ミリ秒）
